@@ -10,6 +10,7 @@ Revision history for Perl extension Test::Apocalypse
 	Tweaked the module loading logic so we have less duplication now + less bugs, yay!
 	Fixed a warning in the OutdatedPrereqs test so we don't cause FAILs with the Test::NoWarnings module :(
 	Added Test::NoPlan to the testsuite
+	Added debugging of test info, thanks POE::Test::Loops!
 
 * 0.09
 
